force-app/main/default/objects/HSE_Local_Health_Office_Details__mdt/HSE_Local_Health_Office_Details__mdt.object-meta.xml
<CustomObject>
    <label>HSE_Local_Health_Office_Details</label>
    <pluralLabel>HSE_Local_Health_Office_Details</pluralLabel>
</CustomObject>