force-app/main/default/objects/HSE_Local_Health_Office_Details__mdt/fields/hse_LocalHealthOffice__c.field-meta.xml
<CustomField>
    <fullName>hse_LocalHealthOffice__c</fullName>
    <label>HSE Local Health Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dublin North</fullName>
                <default>true</default>
                <label>Dublin North</label>
            </value>
            <value>
                <fullName>Dublin North West</fullName>
            </value>
            <value>
                <fullName>Dublin South</fullName>
            </value>
            <value>
                <fullName>Dublin South East</fullName>
            </value>
            <value>
                <fullName>Dublin South East - Wicklow</fullName>
            </value>
            <value>
                <fullName>Dublin South West</fullName>
            </value>
            <value>
                <fullName>Kildare West Wicklow</fullName>
            </value>
            <value>
                <fullName>Mid West - Clare</fullName>
            </value>
            <value>
                <fullName>Mid West - Limerick</fullName>
            </value>
            <value>
                <fullName>Mid West - Tipperary</fullName>
            </value>
            <value>
                <fullName>Midlands - Westmeath</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West -Donegal</fullName>
            </value>
            <value>
                <fullName>North West - Sligo/Leitrim</fullName>
            </value>
            <value>
                <fullName>South - Cork</fullName>
            </value>
            <value>
                <fullName>South East- Carlow/Kilkenney</fullName>
            </value>
            <value>
                <fullName>South East-Tipperary</fullName>
            </value>
            <value>
                <fullName>South East- Waterford</fullName>
            </value>
            <value>
                <fullName>South East- Wexford</fullName>
            </value>
            <value>
                <fullName>South - Kerry</fullName>
            </value>
            <value>
                <fullName>West - Galway</fullName>
            </value>
            <value>
                <fullName>West - Mayo</fullName>
            </value>
            <value>
                <fullName>West - Roscommon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>