force-app/main/default/objects/HSE_Local_Health_Office_Details__mdt/fields/hse_LocalHealthOfficeAddress__c.field-meta.xml
<CustomField>
    <fullName>hse_LocalHealthOfficeAddress__c</fullName>
    <label>HSE Local Health Office Address</label>
    <type>TextArea</type>
</CustomField>