force-app/main/default/objects/HSE_Local_Health_Office_Details__mdt/fields/hse_LocalHealthOfficePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>hse_LocalHealthOfficePhoneNumber__c</fullName>
    <label>HSE Local Health Office PhoneNumber</label>
    <type>Phone</type>
</CustomField>