force-app/main/default/objects/HSE_Local_Health_Office_Details__mdt/fields/hse_LocalHealthOfficerName__c.field-meta.xml
<CustomField>
    <fullName>hse_LocalHealthOfficerName__c</fullName>
    <label>HSE Local Health Officer Name</label>
    <type>TextArea</type>
</CustomField>